Fix form alignment by adding padding to first form-col

--- a/css/style.css
+++ b/css/style.css
@@ -1867,6 +1867,10 @@ section.visible {
     gap: 0.5rem;
 }
 
+.form-col:first-child {
+    padding-top: 1.5rem;
+}
+
 .form-col input,
 .form-col select {
     width: 100%;
